# LabTecnologiaObjetos

./: .gitignore  README.md
EjerciciosPropuestos/Lab04/: CMakeLists.txt  Ejercicio01.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paises.json  paises2.json
EjerciciosPropuestos/Lab05/: CMakeLists.txt  country.cpp  country.h  country.ui  ejercicio01.cpp  ejercicio02.cpp  ejercicio03.cpp  ejercicio04.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
EjerciciosPropuestos/Lab06/: CMakeLists.txt  main.cpp
EjerciciosPropuestos/Lab07/: CMakeLists.txt  Ejercicio02.cpp  Ejercicio03.cpp  main.cpp
EjerciciosPropuestos/Laboratorio 01/: Ejercicio02.cpp  Ejercicio05.cpp
EjerciciosPropuestos/Laboratorio02/: Ejercicio02.cpp
EjerciciosResueltos/RTO-Laboratorio04/: CMakeLists.txt  Ejercicio01.cpp  Ejercicio02.cpp  Ejercicio04.cpp  Task.cpp  Task.ui  comunicacion.cpp  comunicacion.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
EjerciciosResueltos/RTO-Laboratorio05/: CMakeLists.txt  ejercicio01.cpp  ejercicio02.cpp  ejercicio03.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  task.cpp  task.h  task.ui
EjerciciosResueltos/RTO-Laboratorio06/: CMakeLists.txt  Ejercicio01.cpp  Ejercicio02.cpp  Ejercicio03.cpp  main.cpp
EjerciciosResueltos/RTO-Laboratorio07/: CMakeLists.txt  Ejercicio02.cpp  main.cpp
Laboratorio 01/: Ejercicio01.cpp  Ejercicio03.cpp
Laboratorio02/: Ejercicio01.cpp  Ejercicio02.cpp
Laboratorio03/Ejercicio01/: rectangulo.h
Laboratorio03/Ejercicio02/: main.cpp  time.cpp  time.h
Laboratorio03/Ejercicio03/: lista.cpp  nodo.h
(+23 files in other folders)
